<resources>
    <string name="app_name">BackOnTrack</string>
    <string name="action_settings">Settings</string>
    <string name="Exercise_TabLabel">Exercícios</string>
    <string name="Calendar_TabLabel">Calendário</string>
    <string name="start_exercise">COMEÇAR</string>
    <string name="button_start">COMEÇAR</string>
    <string name="button_stop">PARAR</string>
    <string name="button_continue">CONTINUE</string>
    <string name="button_finish">FINALIZAR</string>
    <string name="sectionToExercise_extraTAG">LEVEL</string>
    <string name="timer_min_description">MIN</string>
    <string name="timer_sec_description">SEG</string>
    <string name="timer_mil_description">MIL</string>
    <string name="timer_start">00:00:00</string>
    <string name="finish_alert_description">Você não finalizou ainda seu exercício. Se insistir em voltar, o mesmo será finalizado automaticamente.  Deseja finalizar o exercício?</string>
    <string name="finish_alert_title">Você está saindo do exercício sem finalizá-lo!</string>
    <string name="dialog_finish">FINALIZAR</string>
    <string name="dialog_dontFinish">NÃO FINALIZAR</string>
    <string name="img_description_alert">alerta</string>
    <string name="txt_effort_exercise_confirmation">Qual foi o seu nível de esforço para realizar esse exercício?</string>
    <string name="exercise_finish_confirmation">Você acabou?</string>
    <string name="emoticon1_title">Muito Leve</string>
    <string name="emoticon2_title">Leve</string>
    <string name="emoticon3_title">Moderado</string>
    <string name="emoticon4_title">Difícil</string>
    <string name="emoticon5_title">Muito Difícil</string>
    <string name="txt_motivation">Parabéns! Você está indo muito bem.</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="exercise_execution_extra">EXERCISE_EXECUTION</string>
    <string name="btn_watch_description">Assistir</string>
    <string name="calendar_dom">DOM</string>
    <string name="calendar_seg">SEG</string>
    <string name="calendar_ter">TER</string>
    <string name="calendar_qua">QUA</string>
    <string name="calendar_qui">QUI</string>
    <string name="calendar_sex">SEX</string>
    <string name="calendar_sab">SAB</string>
    <string name="calendar_average_txt">Média Esforço Diário</string>
    <string name="CALENDAR_KEY">070908</string>
    <string name="DEBUG_STORAGE_GET">Null Shared Preferences</string>
    <string name="LEVELS_KEY">060807</string>
</resources>
