<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_layout_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/high_importance_100px"
        android:contentDescription="@string/img_description_alert"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/finish_alert_title"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/finish_alert_description"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="3dip"
        android:layout_marginRight="3dip"
        android:background="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        style="?android:attr/buttonBarButtonStyle">

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textColor="@android:color/white"
            android:text="@string/dialog_finish"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_decline"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="60dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:textColor="@android:color/white"
            android:text="@string/dialog_dontFinish"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>