<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_confirmation_layout_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/txt_confirmation_screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_finish_confirmation"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/btn_close_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close2" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/white_view_background" />

        <RelativeLayout
            android:id="@+id/layout_timer_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/ic_stopwatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_stopwatch" />

            <TextView
                android:id="@+id/txt_time_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ic_stopwatch"
                android:layout_centerHorizontal="true"
                android:text="@string/timer_start"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/layout_time_result_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ic_stopwatch"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:text="@string/timer_min_description"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_sec_description"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/timer_mil_description"
                    android:textSize="12sp" />
            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="5dp"
            android:background="@color/white_view_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_effort_exercise_confirmation"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/layout_emoticons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ic_emotion_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_emoticon_1" />

                <ImageButton
                    android:id="@+id/ic_emotion_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_emoticon_2" />

                <ImageButton
                    android:id="@+id/ic_emotion_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_emoticon_3" />

                <ImageButton
                    android:id="@+id/ic_emotion_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_emoticon_4" />

                <ImageButton
                    android:id="@+id/ic_emotion_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_emoticon_5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_emoticons_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_emoticons"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_emoticon_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:text="@string/emoticon1_title"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txt_emoticon_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/emoticon2_title"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txt_emoticon_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/emoticon3_title"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txt_emoticon_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/emoticon4_title"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/txt_emoticon_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/emoticon5_title"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_motivation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_emoticons_titles"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/txt_motivation"
                android:textAlignment="center"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_motivation"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_confirmation_shape"
                android:gravity="center"
                android:text="@string/btn_confirm"
                android:textAlignment="center"
                android:textColor="@color/white_view"
                android:textSize="26sp" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>